[package]
name = "fawkes-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["serde_json", "json"]}
serde = "1.0.145"
serde_json = "1.0.86"
rand = "0.8.5"